# trajopt_benchmarking

./: CMakeLists.txt  README.md  package.xml
launch/: collision_comparison.launch  constraints_comparison.launch  costs_comparison.launch  solver_comparison_case1.launch  solver_comparison_case2.launch
src/: collision_comparison.cpp  constraints_comparison.cpp  costs_comparison.cpp  solver_comparison_case1.cpp  solver_comparison_case2.cpp
