<?xml version="1.0"?>
<package format="2">
  <name>trajopt_benchmarking</name>
  <version>0.1.0</version>
  <description>This package contains benchmarks for testing trajopt_ros</description>

  <maintainer email="matthew.powelson@swri.org">Matthew Powelson</maintainer>
  <license>Apache 2.0</license>
  <author >Matthew Powelson</author>
  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>trajopt</depend>
  <depend>trajopt_examples</depend>
  <depend>tesseract_ros</depend>
  <depend>tesseract_planning</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
